Fixed excess spacing above footer

--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@ a img{ border: none }
 	overflow: hidden;
 }
 
+#wrapper {
+	height: 660px;
+}
+
 #footer p{
 	font-size: 10px;
 	line-height: 12px;
